--- a/multi-step-form-main/index.html
+++ b/multi-step-form-main/index.html
@@ -50,7 +50,7 @@
         <!-- * Step 1 start -->
         <section class="stp step-1">
           <article class="heading">
-            <h1 class="title">Personal info</h1>
+            <h1 class="title">Personal information</h1>
             <p class="exp">
               Please provide your name, email address, and phone number.
             </p>
