--- a/multi-step-form-main/index.html
+++ b/multi-step-form-main/index.html
@@ -1,237 +1,247 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png"sizes="32x32"href="./assets/images/favicon-32x32.png"/>
-    <link rel="preconnect" href="https://fonts.googleapis.com"/>
+
+     <!-- Favicon for the website -->
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png"/>
+   
+    <!-- Preconnecting to Google Fonts for better performance -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap"rel="stylesheet"/>
-    <link rel="stylesheet" href="style.css" />
+
+    <!-- Importing Ubuntu font from Google Fonts -->
+   <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap"rel="stylesheet"/>
+
+   <!-- title -->
     <title>Multi-step form</title>
+
+    <!-- Linking external CSS file -->
+    <link rel="stylesheet" href="style.css" />
+
+    <!-- Linking external JavaScript file with defer for async execution -->
+    <script src="script.js" defer></script>
   </head>
   <body>
-    <main class="form">
-      <section class="form-container">
-        <!-- Sidebar start -->
-        <section class="form-sidebar">
-          <article class="step active">
+    <div class="form">
+      <div class="form-container">
+        <!-- Sidebar start: Contains the step indicators -->
+        <div class="form-sidebar">
+          <!-- Step 1 indicator -->
+          <div class="step active">
             <div class="circle">1</div>
-            <article class="step-content">
+            <div class="step-content">
               <span>Step 1</span>
               <b>Your info</b>
-            </article>
-          </article>
-          <article class="step">
+            </div>
+          </div>
+          <!-- Step 2 indicator -->
+          <div class="step">
             <div class="circle">2</div>
-            <article class="step-content">
-              <span>Step2</span>
+            <div class="step-content">
+              <span>Step 2</span>
               <b>Select plan</b>
-            </article>
-          </article>
-          <article class="step">
+            </div>
+          </div>
+          <!-- Step 3 indicator -->
+          <div class="step">
             <div class="circle">3</div>
-            <article class="step-content">
+            <div class="step-content">
               <span>Step 3</span>
               <b>Add-ons</b>
-            </article>
-          </article>
-          <article class="step">
+            </div>
+          </div>
+          <!-- Step 4 indicator -->
+          <div class="step">
             <div class="circle">4</div>
-            <article class="step-content">
+            <div class="step-content">
               <span>Step 4</span>
               <b>Summary</b>
-            </article>
-          </article>
-        </section>
-        <!-- Sidebar end -->
+            </div>
+          </div>
+        </div>
+       <!-- Sidebar end -->
 
-        <!-- * Step 1 start -->
-        <section class="stp step-1">
-          <article class="heading">
-            <h1 class="title">Personal information</h1>
+        <!-- Step 1: Collect user information -->
+        <div class="stp step-1">
+          <div class="header">
+            <h1 class="title">Personal info</h1>
             <p class="exp">
               Please provide your name, email address, and phone number.
             </p>
-          </article>
+          </div>
           <form>
-            <section class="label">
+         <!-- Name input field -->
+            <div class="label">
               <label for="name">Name</label>
-              <p class="error">This Field Is A Must</p>
-            </section>
+              <p class="error">This Field is required</p>
+            </div>
             <input
               required
               type="text"
               id="name"
               placeholder="e.g. Makuachi Adekoga"
             />
-            <section class="label">
+             <!-- Email input field -->
+            <div class="label">
               <label for="email">Email Address</label>
-              <p class="error">This Field Is A Must</p>
-            </section>
+              <p class="error">This Field is required</p>
+            </div>
             <input
               required
               type="text"
               id="email"
-              placeholder="e.g. onyekachi@gmail.com"
+              placeholder="e.g. goodroadiskeyword@gmail.com"
             />
-            <section class="label">
+          <!-- Phone number input field -->
+            <div class="label">
               <label for="phone">Phone Number</label>
-              <p class="error">This Field Is A Must</p>
-            </section>
+              <p class="error">This Field is required</p>
+            </div>
             <input
               required
               type="tel"
               id="phone"
-              placeholder="e.g. 081 3572 8343"
+              placeholder="e.g. 081 3345 6789"
             />
           </form>
-          <section class="btns">
-            <button class="next-step" type="submit">Next Step</button>
-          </section>
-        </section>
+          <div class="btns">
+            <button class="next-stp" type="submit">Next Step</button>
+          </div>
+        </div>
         <!-- Step 1 end -->
-
-        <!-- * Step 2 start -->
-        <section class="stp step-2">
-          <article class="heading">
+        <!-- Step 2: Select a subscription plan -->
+        <div class="stp step-2">
+          <div class="header">
             <h1 class="title">Select your plan</h1>
             <p class="exp">You have the option of monthly or yearly billing.</p>
-          </article>
+          </div>
           <form>
-            <section class="plan-card selected">
+                        <!-- Plan options -->
+            <div class="plan-card selected">
               <img src="./assets/images/icon-arcade.svg" alt="arcade" />
-              <article class="plan-info chosen">
+              <div class="plan-info chosen">
                 <b>Arcade</b>
                 <span class="plan-priced">$9/mo</span>
-              </article>
-            </section>
-            <section class="plan-card">
+              </div>
+            </div>
+            <div class="plan-card">
               <img src="./assets/images/icon-advanced.svg" alt="arcade" />
-              <article class="plan-info">
+              <div class="plan-info">
                 <b>Advanced</b>
                 <span class="plan-priced">$12/mo</span>
-              </article>
-            </section>
-            <section class="plan-card">
+              </div>
+            </div>
+            <div class="plan-card">
               <img src="./assets/images/icon-pro.svg" alt="arcade" />
-              <article class="plan-info">
+              <div class="plan-info">
                 <b>Pro</b>
                 <span class="plan-priced">$15/mo</span>
-              </article>
-            </section>
+              </div>
+            </div>
           </form>
-
-          <section class="switcher">
+            <!-- Billing switch -->
+          <div class="switcher">
             <p class="monthly sw-active">Monthly</p>
             <label class="switch">
               <input type="checkbox" />
               <span class="slider round"></span>
             </label>
             <p class="yearly">Yearly</p>
-          </section>
-          <section class="btns">
-            <button class="prev-step disable" type="button">Go Back</button>
-            <button class="next-step" type="submit">Next Step</button>
-          </section>
-        </section>
+          </div>
+          <div class="btns">
+            <button class="prev-stp" type="button">Go Back</button>
+            <button class="next-stp" type="submit">Next Step</button>
+          </div>
+        </div>
         <!-- Step 2 end -->
-
-        <!-- * Step 3 start -->
-        <section class="stp step-3">
-          <article class="heading">
+        <!-- Step 3: Select add-ons -->
+        <div class="stp step-3">
+          <div class="header">
             <h1 class="title">Pick add-ons</h1>
             <p class="exp">Add-ons help enhance your gaming experience.</p>
-          </article>
+          </div>
           <form>
-            <section class="box" data-id="1">
+               <!-- Add-ons selection -->
+            <div class="box" data-id="1">
               <input type="checkbox" id="online" />
-              <article class="description">
+              <div class="description">
                 <label for="online">Online service</label>
                 <small>Access to multiplayer games</small>
-              </article>
+              </div>
               <p class="price">+$1/mo</p>
-            </section>
-            <section class="box" data-id="2">
+            </div>
+            <div class="box" data-id="2">
               <input type="checkbox" id="larger" />
-              <article class="description">
+              <div class="description">
                 <label for="larger">Larger storage</label>
                 <small>Extra 1TB of cloud save</small>
-              </article>
+              </div>
               <p class="price">+$2/mo</p>
-            </section>
-            <section class="box" data-id="3">
+            </div>
+            <div class="box" data-id="3">
               <input type="checkbox" id="profile" />
-              <article class="description">
+              <div class="description">
                 <label for="profile">Customizable Profile</label>
                 <small>Custom theme on your profile</small>
-              </article>
+              </div>
               <p class="price">+$2/mo</p>
-            </section>
+            </div>
           </form>
-
-          <section class="btns">
-            <button class="prev-step disable" type="button">Go Back</button>
-            <button class="next-step" type="submit">Next Step</button>
-          </section>
-        </section>
+          <div class="btns">
+            <button class="prev-stp" type="button">Go Back</button>
+            <button class="next-stp" type="submit">Next Step</button>
+          </div>
+        </div>
         <!-- Step 3 end -->
-
-        <!-- * Step 4 start -->
-        <section class="stp step-4">
-          <article class="heading">
+        <!-- Step 4: Summary and confirmation -->
+        <div class="stp step-4">
+          <div class="header">
             <h1 class="title">Finishing up</h1>
             <p class="exp">
               Double-check everything looks OK before confirming.
             </p>
-          </article>
-          <section class="selection-box">
-            <article class="selection-container">
+          </div>
+          <div class="selection-box">
+            <div class="selection-container">
               <div class="selected-plan">
-                <p class="plan-name">
-                  Arcade(Monthly)
-                  <span><a href="#step-2">change</a></span>
-                </p>
+                <p class="plan-name">Arcade(Monthly)</p>
                 <p class="plan-price">$9/mo</p>
               </div>
               <hr />
-              <article class="addons">
-                <div class="selected-addon">
-                  <span class="service-name">Online serivice</span>
-                  <span class="service-price">+$1/mo</span>
-                </div>
-                <div class="selected-addon">
-                  <span class="service-name">Larger storage</span>
-                  <span class="service-price">+$2/mo</span>
-                </div>
-              </article>
-            </article>
+              <div class="addons">
+                <template>
+                  <div class="selected-addon">
+                    <span class="service-name">Online serivice</span>
+                    <span class="servic-price">+$1/mo</span>
+                  </div>
+                </template>
+              </div>
+            </div>
             <p class="total">Total (per month) <b>+$12/mo</b></p>
-          </section>
-
-          <section class="btns">
-            <button class="prev-step disable" type="button">Go Back</button>
-            <button class="next-step confirm" type="submit">Confirm</button>
-          </section>
-        </section>
+          </div>
+          <div class="btns">
+            <button class="prev-stp" type="button">Go Back</button>
+            <button class="next-stp" type="submit">Confirm</button>
+          </div>
+        </div>
         <!-- Step 4 end -->
-
-        <!-- Step 5 start -->
-        <section class="stp step-5 success">
+        <!-- Step 5: Thank you message -->
+        <div class="stp step-5">
           <img src="./assets/images/icon-thank-you.svg" alt="" />
-          <article class="heading">
+          <div class="header">
             <h1 class="title">Thank you!</h1>
             <p class="exp">
               Thanks for confirming your subscription! We hope you have fun
               using our platform. If you ever need support, please feel free to
-              email us at onyekachi@gmail.com
+              email us at goodroadiskeyword@gmail.com.
             </p>
-          </article>
-        </section>
+          </div>
+          <button class="next-stp"></button>
+        </div>
         <!-- Step 5 end -->
-      </section>
-    </main>
-    <script src="script.js"></script>
+      </div>
+    </div>
   </body>
 </html>
